@@ -31,14 +31,18 @@ import org.mockito.Mock;
 import org.mockito.stubbing.Answer;
 import org.xwiki.context.Execution;
 import org.xwiki.context.ExecutionContext;
+import org.xwiki.localization.ContextualLocalizationManager;
 import org.xwiki.model.EntityType;
 import org.xwiki.model.reference.DocumentReference;
 import org.xwiki.model.reference.DocumentReferenceResolver;
 import org.xwiki.model.reference.EntityReference;
+import org.xwiki.rendering.block.Block;
+import org.xwiki.rendering.block.GroupBlock;
 import org.xwiki.rendering.block.WordBlock;
 import org.xwiki.rendering.block.XDOM;
 import org.xwiki.rendering.executor.ContentExecutor;
 import org.xwiki.rendering.macro.dashboard.Gadget;
+import org.xwiki.rendering.syntax.Syntax;
 import org.xwiki.rendering.transformation.MacroTransformationContext;
 import org.xwiki.rendering.transformation.TransformationContext;
 import org.xwiki.security.authorization.AuthorExecutor;
@@ -66,12 +70,14 @@ import static org.mockito.Mockito.when;
 @ComponentTest
 class DefaultGadgetSourceTest
 {
+    private static final String TEST_SOURCE = "XWiki.Test";
+
+    private static final String TRANSFORMATION_ID = "fooId";
+
+    private static final DocumentReference DOCUMENT_REFERENCE = new DocumentReference("wiki", "XWiki", "Test");
+
     @InjectMockComponents
     private DefaultGadgetSource defaultGadgetSource;
-
-    private static final String testSource = "XWiki.Test";
-
-    private static final String transformationId = "fooId";
 
     @MockComponent
     private AuthorExecutor authorExecutor;
@@ -79,8 +85,8 @@ class DefaultGadgetSourceTest
     @MockComponent
     private DocumentAuthorizationManager authorizationManager;
 
-    @Mock
-    private DocumentReference documentReference;
+    @MockComponent
+    private ContextualLocalizationManager localizationManager;
 
     @Mock
     private XWikiDocument xWikiDocument;
@@ -116,57 +122,59 @@ class DefaultGadgetSourceTest
     {
         DocumentReferenceResolver<String> currentReferenceResolver =
             componentManager.getInstance(DocumentReferenceResolver.TYPE_STRING, "current");
-        when(currentReferenceResolver.resolve(testSource)).thenReturn(documentReference);
+        when(currentReferenceResolver.resolve(TEST_SOURCE)).thenReturn(DOCUMENT_REFERENCE);
 
         Execution execution = componentManager.getInstance(Execution.class);
         ExecutionContext executionContext = mock(ExecutionContext.class);
         when(execution.getContext()).thenReturn(executionContext);
-        when(executionContext.getProperty("xwikicontext")).thenReturn(xWikiContext);
+        when(executionContext.getProperty("xwikicontext")).thenReturn(this.xWikiContext);
 
-        when(xWikiContext.getWiki()).thenReturn(xwiki);
-        when(xwiki.getDocument(documentReference, xWikiContext)).thenReturn(xWikiDocument);
+        when(this.xWikiContext.getWiki()).thenReturn(this.xwiki);
+        when(this.xwiki.getDocument(DOCUMENT_REFERENCE, this.xWikiContext)).thenReturn(this.xWikiDocument);
 
         DocumentReferenceResolver<EntityReference> currentReferenceEntityResolver =
             componentManager.getInstance(DocumentReferenceResolver.TYPE_REFERENCE, "current");
 
-        when(currentReferenceEntityResolver.resolve(DefaultGadgetSource.GADGET_CLASS)).thenReturn(gadgetClassReference);
+        when(currentReferenceEntityResolver.resolve(DefaultGadgetSource.GADGET_CLASS)).thenReturn(
+            this.gadgetClassReference);
         TransformationContext transformationContext = mock(TransformationContext.class);
-        when(macroTransformationContext.getTransformationContext()).thenReturn(transformationContext);
-        when(transformationContext.getId()).thenReturn(transformationId);
+        when(this.macroTransformationContext.getTransformationContext()).thenReturn(transformationContext);
+        when(transformationContext.getId()).thenReturn(TRANSFORMATION_ID);
 
         VelocityManager velocityManager = componentManager.getInstance(VelocityManager.class);
-        when(velocityManager.getVelocityEngine()).thenReturn(velocityEngine);
+        when(velocityManager.getVelocityEngine()).thenReturn(this.velocityEngine);
 
-        when(authorExecutor.call(any(), eq(ownerAuthorReference), eq(ownerSourceReference))).then(invocationOnMock -> {
-            Callable callable = (Callable) invocationOnMock.getArguments()[0];
-            return callable.call();
-        });
+        when(this.authorExecutor.call(any(), eq(this.ownerAuthorReference), eq(this.ownerSourceReference)))
+            .then(invocationOnMock -> {
+                Callable<?> callable = invocationOnMock.getArgument(0);
+                return callable.call();
+            });
 
         this.contentExecutor =
             componentManager.getInstance(ContentExecutor.TYPE_MACRO_TRANSFORMATION);
-        when(contentExecutor.execute(any(), any(), any(), any())).then((Answer<XDOM>) invocationOnMock -> {
+        when(this.contentExecutor.execute(any(), any(), any(), any())).then((Answer<XDOM>) invocationOnMock -> {
             String content = invocationOnMock.getArgument(0);
-            XDOM xdom = new XDOM(Collections.singletonList(new WordBlock(content)));
-            return xdom;
+            return new XDOM(Collections.singletonList(new WordBlock(content)));
         });
-        when(ownerDocument.getAuthorReference()).thenReturn(ownerAuthorReference);
-        when(ownerDocument.getDocumentReference()).thenReturn(ownerSourceReference);
+        when(this.ownerDocument.getAuthorReference()).thenReturn(this.ownerAuthorReference);
+        when(this.ownerDocument.getDocumentReference()).thenReturn(this.ownerSourceReference);
+        when(this.xWikiDocument.getSyntax()).thenReturn(Syntax.XWIKI_2_1);
     }
 
     @Test
     void getGadgets() throws Exception
     {
-        assertEquals(new ArrayList<>(), this.defaultGadgetSource.getGadgets(testSource, macroTransformationContext));
+        assertEquals(List.of(), this.defaultGadgetSource.getGadgets(TEST_SOURCE, this.macroTransformationContext));
 
         BaseObject gadgetObject1 = mock(BaseObject.class);
-        when(xWikiDocument.getXObjects(gadgetClassReference)).thenReturn(Collections.singletonList(gadgetObject1));
-        when(gadgetObject1.getOwnerDocument()).thenReturn(ownerDocument);
+        when(this.xWikiDocument.getXObjects(this.gadgetClassReference)).thenReturn(List.of(gadgetObject1));
+        when(gadgetObject1.getOwnerDocument()).thenReturn(this.ownerDocument);
         when(gadgetObject1.getStringValue("title")).thenReturn("Gadget 1");
         when(gadgetObject1.getLargeStringValue("content")).thenReturn("Some content");
         when(gadgetObject1.getStringValue("position")).thenReturn("0");
         when(gadgetObject1.getNumber()).thenReturn(42);
-        when(this.authorizationManager.hasAccess(Right.SCRIPT, EntityType.DOCUMENT, ownerAuthorReference,
-            ownerSourceReference)).thenReturn(true);
+        when(this.authorizationManager.hasAccess(Right.SCRIPT, EntityType.DOCUMENT, this.ownerAuthorReference,
+            this.ownerSourceReference)).thenReturn(true);
         when(this.velocityEngine.evaluate(any(), any(), any(), eq("Gadget 1"))).then((Answer<Void>) invocation -> {
             Object[] args = invocation.getArguments();
             StringWriter stringWriter = (StringWriter) args[1];
@@ -175,7 +183,7 @@ class DefaultGadgetSourceTest
             return null;
         });
 
-        List<Gadget> gadgets = this.defaultGadgetSource.getGadgets(testSource, macroTransformationContext);
+        List<Gadget> gadgets = this.defaultGadgetSource.getGadgets(TEST_SOURCE, this.macroTransformationContext);
         assertEquals(1, gadgets.size());
         Gadget gadget = gadgets.get(0);
         assertEquals("Evaluated velocity version of gadget 1", gadget.getTitle().get(0).toString());
@@ -190,20 +198,32 @@ class DefaultGadgetSourceTest
     @Test
     void getGadgetWithoutScriptRight() throws Exception
     {
-        assertEquals(new ArrayList<>(), this.defaultGadgetSource.getGadgets(testSource, macroTransformationContext));
+        assertEquals(new ArrayList<>(), this.defaultGadgetSource.getGadgets(TEST_SOURCE, this.macroTransformationContext));
 
         BaseObject gadgetObject1 = mock(BaseObject.class);
-        when(xWikiDocument.getXObjects(gadgetClassReference)).thenReturn(Collections.singletonList(gadgetObject1));
-        when(gadgetObject1.getOwnerDocument()).thenReturn(ownerDocument);
+        when(gadgetObject1.getOwnerDocument()).thenReturn(this.ownerDocument);
         when(gadgetObject1.getStringValue("title")).thenReturn("Gadget 2");
         when(gadgetObject1.getLargeStringValue("content")).thenReturn("Some other content");
         when(gadgetObject1.getStringValue("position")).thenReturn("2");
         when(gadgetObject1.getNumber()).thenReturn(12);
-        when(this.authorizationManager.hasAccess(Right.SCRIPT, EntityType.DOCUMENT, ownerAuthorReference,
-            ownerSourceReference)).thenReturn(false);
 
-        List<Gadget> gadgets = this.defaultGadgetSource.getGadgets(testSource, macroTransformationContext);
-        assertEquals(1, gadgets.size());
+        BaseObject gadgetObject2 = mock();
+        when(gadgetObject2.getOwnerDocument()).thenReturn(this.ownerDocument);
+        when(gadgetObject2.getStringValue("title")).thenReturn("$services.localization.render('xwiki.gadget2')");
+        when(gadgetObject2.getLargeStringValue("content")).thenReturn("Localized content");
+        when(gadgetObject2.getStringValue("position")).thenReturn("3");
+        when(gadgetObject2.getNumber()).thenReturn(13);
+
+        when(this.localizationManager.getTranslationPlain("xwiki.gadget2")).thenReturn("Translated Title");
+
+        when(this.xWikiDocument.getXObjects(this.gadgetClassReference)).thenReturn(List.of(gadgetObject1,
+            gadgetObject2));
+
+        when(this.authorizationManager.hasAccess(Right.SCRIPT, EntityType.DOCUMENT, this.ownerAuthorReference,
+            this.ownerSourceReference)).thenReturn(false);
+
+        List<Gadget> gadgets = this.defaultGadgetSource.getGadgets(TEST_SOURCE, this.macroTransformationContext);
+        assertEquals(2, gadgets.size());
         Gadget gadget = gadgets.get(0);
         assertEquals("Gadget 2", gadget.getTitle().get(0).toString());
         assertEquals("Some other content", gadget.getContent().get(0).toString());
@@ -212,5 +232,36 @@ class DefaultGadgetSourceTest
             .execute(eq("Gadget 2"), any(), any(), any());
         verify(this.contentExecutor)
             .execute(eq("Some other content"), any(), any(), any());
+
+        Gadget gadget2 = gadgets.get(1);
+        assertEquals("Translated Title", gadget2.getTitle().get(0).toString());
+        assertEquals("Localized content", gadget2.getContent().get(0).toString());
+        assertEquals("13", gadget2.getId());
+        verify(this.contentExecutor)
+            .execute(eq("Translated Title"), any(), any(), any());
+        verify(this.contentExecutor)
+            .execute(eq("Localized content"), any(), any(), any());
+    }
+
+    @Test
+    void getDashboardSourceMetadata()
+    {
+        when(this.xwiki.getURL(DOCUMENT_REFERENCE, "save", "", "", this.xWikiContext))
+            .thenReturn("https://example.com/save");
+        when(this.xwiki.getURL(DOCUMENT_REFERENCE, "objectremove", "", "", this.xWikiContext))
+            .thenReturn("https://example.com/remove");
+        when(this.xwiki.getURL(DOCUMENT_REFERENCE, "objectadd", "", "", this.xWikiContext))
+            .thenReturn("https://example.com/add");
+        when(this.xwiki.getURL(DOCUMENT_REFERENCE, "view", "", "", this.xWikiContext))
+            .thenReturn("https://example.com/view");
+
+        List<Block> metadata = this.defaultGadgetSource.getDashboardSourceMetadata(TEST_SOURCE,
+            this.macroTransformationContext);
+
+        assertEquals(1, metadata.size());
+        GroupBlock metadataContainer = (GroupBlock) metadata.get(0);
+        assertEquals("metadata", metadataContainer.getParameter("class"));
+        assertEquals("xwiki/2.1", metadataContainer.getParameter("data-source-syntax"));
+        assertEquals(7, metadataContainer.getChildren().size());
     }
 }
